[package]
name = "rust_lib_catchall"
version = "0.1.0"
authors = ["Christian Amsüss <chrysn@fsfe.org>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# Provides the panic_handler
riot-wrappers = "0.6"

riot-shell-commands = { git = "https://gitlab.com/etonomy/riot-module-examples", optional = true }
